@@ -17,18 +17,62 @@ namespace GccCommon
 
         public abstract Opus.Core.StringArray EnvironmentPaths(Opus.Core.Target target);
 
-        private static System.Collections.Generic.Dictionary<Opus.Core.Target, string> machineTypesForTarget = new System.Collections.Generic.Dictionary<Opus.Core.Target, string>();
-
-        public string MachineType(Opus.Core.Target target)
+        private class GccDetails
         {
-            if (!machineTypesForTarget.ContainsKey(target))
+            public GccDetails(string version,
+                              string gxxIncludePath,
+                              string target)
+            {
+                if (null == version)
+                {
+                    throw new Opus.Core.Exception("Unable to determine Gcc version", false);
+                }
+                if (null == target)
+                {
+                    throw new Opus.Core.Exception("Unable to determine Gcc target", false);
+                }
+
+                this.Version = version;
+                this.GxxIncludePath = gxxIncludePath;
+                this.Target = target;
+            }
+
+            public string Version
+            {
+                get;
+                private set;
+            }
+
+            public string GxxIncludePath
+            {
+                get;
+                private set;
+            }
+
+            public string Target
+            {
+                get;
+                private set;
+            }
+        }
+
+        private static System.Collections.Generic.Dictionary<Opus.Core.Target, GccDetails> gccDetailsForTarget = new System.Collections.Generic.Dictionary<Opus.Core.Target, GccDetails>();
+
+        private void GetGccDetails(Opus.Core.Target target)
+        {
+            string pathPrefix = null;
+            string gxxIncludeDir = null;
+            string gccTarget = null;
+            string gccVersion = null;
+
+            // get version
             {
                 System.Diagnostics.ProcessStartInfo processStartInfo = new System.Diagnostics.ProcessStartInfo();
                 processStartInfo.FileName = this.Executable(target);
                 processStartInfo.ErrorDialog = true;
                 processStartInfo.UseShellExecute = false;
                 processStartInfo.RedirectStandardOutput = true;
-                processStartInfo.Arguments = "-dumpmachine";
+                processStartInfo.Arguments = "-dumpversion";
 
                 System.Diagnostics.Process process = null;
                 try
@@ -45,19 +89,125 @@ namespace GccCommon
                     throw new Opus.Core.Exception(System.String.Format("Unable to execute '{0}'", processStartInfo.FileName), false);
                 }
 
-                string machineType = process.StandardOutput.ReadToEnd();
+                gccVersion = process.StandardOutput.ReadToEnd();
                 process.WaitForExit();
-                machineType = machineType.Trim();
-                if (System.String.IsNullOrEmpty(machineType))
-                {
-                    throw new Opus.Core.Exception("Unable to obtain the machine type from gcc -dumpmachine", false);
-                }
-                machineTypesForTarget[target] = machineType;
-
-                Opus.Core.Log.DebugMessage("Gcc machine type for target '{0}' is '{1}'", target.ToString(), machineType);
+                gccVersion = gccVersion.Trim();
             }
 
-            return machineTypesForTarget[target];
+            // get paths and targets
+            {
+                System.Diagnostics.ProcessStartInfo processStartInfo = new System.Diagnostics.ProcessStartInfo();
+                processStartInfo.FileName = this.Executable(target);
+                processStartInfo.ErrorDialog = true;
+                processStartInfo.UseShellExecute = false;
+                processStartInfo.RedirectStandardError = true;
+                processStartInfo.Arguments = "-v";
+
+                System.Diagnostics.Process process = null;
+                try
+                {
+                    process = System.Diagnostics.Process.Start(processStartInfo);
+                }
+                catch (System.ComponentModel.Win32Exception ex)
+                {
+                    throw new Opus.Core.Exception(System.String.Format("'{0}': process filename '{1}'", ex.Message, processStartInfo.FileName), false);
+                }
+
+                if (null == process)
+                {
+                    throw new Opus.Core.Exception(System.String.Format("Unable to execute '{0}'", processStartInfo.FileName), false);
+                }
+
+                string details = process.StandardError.ReadToEnd();
+                process.WaitForExit();
+
+                string[] splitDetails = details.Split(new string[] { System.Environment.NewLine }, System.StringSplitOptions.None);
+
+                foreach (string detail in splitDetails)
+                {
+                    string configuredWith = "Configured with: ";
+                    if (detail.StartsWith(configuredWith))
+                    {
+                        string configuredOptions = detail.Substring(configuredWith.Length);
+                        string[] splitConfigureOptions = configuredOptions.Split(' ');
+
+                        const string pathPrefixKey = "--prefix=";
+                        const string gxxIncludeDirKey = "--with-gxx-include-dir=";
+                        const string targetKey = "--target=";
+                        foreach (string option in splitConfigureOptions)
+                        {
+                            if (option.StartsWith(pathPrefixKey))
+                            {
+                                pathPrefix = option.Substring(pathPrefixKey.Length).Trim();;
+                            }
+                            else if (option.StartsWith(gxxIncludeDirKey))
+                            {
+                                gxxIncludeDir = option.Substring(gxxIncludeDirKey.Length).Trim();
+                            }
+                            else if (option.StartsWith(targetKey))
+                            {
+                                gccTarget = option.Substring(targetKey.Length).Trim();
+                            }
+                        }
+
+                        break;
+                    }
+                }
+
+                if (null == gccTarget)
+                {
+                    foreach (string detail in splitDetails)
+                    {
+                        string targetKey = "Target: ";
+                        if (detail.StartsWith(targetKey))
+                        {
+                            gccTarget = detail.Substring(targetKey.Length).Trim();
+                        }
+                    }
+                }
+
+                if (!gxxIncludeDir.StartsWith(pathPrefix))
+                {
+                    gxxIncludeDir = System.IO.Path.Combine(pathPrefix, gxxIncludeDir);
+                }
+            }
+
+            GccDetails gccDetails = new GccDetails(gccVersion, gxxIncludeDir, gccTarget);
+            gccDetailsForTarget[target] = gccDetails;
+
+            Opus.Core.Log.DebugMessage("Gcc version for target '{0}' is '{1}'", target.ToString(), gccDetails.Version);
+            Opus.Core.Log.DebugMessage("Gcc machine type for target '{0}' is '{1}'", target.ToString(), gccDetails.Target);
+            Opus.Core.Log.DebugMessage("Gxx include path for target '{0}' is '{1}'", target.ToString(), gccDetails.GxxIncludePath);
+        }
+
+        public string GccVersion(Opus.Core.Target target)
+        {
+            if (!gccDetailsForTarget.ContainsKey(target))
+            {
+                GetGccDetails(target);
+            }
+
+            return gccDetailsForTarget[target].Version;
+        }
+
+        public string MachineType(Opus.Core.Target target)
+        {
+            if (!gccDetailsForTarget.ContainsKey(target))
+            {
+                GetGccDetails(target);
+            }
+
+            return gccDetailsForTarget[target].Target;
+        }
+
+        public string GxxIncludePath(Opus.Core.Target target)
+        {
+            if (!gccDetailsForTarget.ContainsKey(target))
+            {
+                GetGccDetails(target);
+            }
+
+            return gccDetailsForTarget[target].GxxIncludePath;
         }
     }
 }
